# din-agents

./: .claudeignore  .env.example  .gitignore  AGENTS.deep.md  AGENTS.md  README.md  pyproject.toml  skills-lock.json
.agents/skills/ask-docs/: SKILL.md
.agents/skills/design-agent/: SKILL.md
.agents/skills/design-task/: SKILL.md
.agents/skills/getting-started/: SKILL.md
.claude/skills/: ask-docs  design-agent  design-task
.claude/skills/crewai-ask-docs/: SKILL.md
.claude/skills/crewai-design-agent/: SKILL.md
.claude/skills/crewai-design-task/: SKILL.md
.claude/skills/crewai-getting-started/: SKILL.md
.claude/skills/crewai-skills-router/: SKILL.md
.cursor/skills/crewai-ask-docs/: SKILL.md
.cursor/skills/crewai-design-agent/: SKILL.md
.github/workflows/: ci.yml
din-agent/: README.md
din-agent/examples/: cross-repo.md  din-core.md  din-studio.md  react-din.md
docs/: FlowArchitecture.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
project/: REPO_MANIFEST.json  ROUTE_CARD.json  SUMMARY.md
scripts/: bootstrap-husky-node-repos.sh  bootstrap-pre-commit-hooks.sh  generate-docs.sh  plan_din_core_then_quality_gates.sh
src/din_agents/: __init__.py  din_core_audio_tasks.py  flow.py  main.py
tests/: test_crew_context.py  test_crew_prompt_contracts.py  test_crew_tool_budgets.py  test_din_core_audio_tasks.py  test_flow_crew_inputs.py  test_flow_rate_limit.py  test_flow_report.py  test_model_routing.py  test_quality_gates.py  test_repo_file_read_tool.py  test_repo_file_write_tool.py  test_repo_paths.py  test_repo_profiles.py  test_report_assembly.py  test_report_dedupe.py  test_routing.py  test_runtime_prefs.py  test_task_guardrails.py  test_workspace_contracts.py
(+40 files in other folders)
